# IoTutorMine

./: .gitignore  LICENSE  README.md  pyproject.toml
api/: extract.js
data/: download.py
frontend/src/data/: videos.js
frontend/src/services/: extract.js
frontend/src/views/: HomePage.vue
models/: download_mobileclip.py  download_moondream.py
src/llava_approach/: inference.py  vlm_responses.csv
src/mobileclip2_approach/: frame_scores.csv  results.csv
src/mobileclip_phash_approach/: inference.py
src/moondream2_approach/: inference.py
