[project]
name = "iotutormine"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp",
    "mobileclip @ git+https://github.com/apple/ml-mobileclip.git",
    "imagehash",
    "Pillow",
    "ollama",
    "huggingface-hub",
    "transformers==4.48.3",
    "torch",
]

[tool.setuptools.packages.find]
where = ["src"]
